--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
 		
         </section>
         <!--================End Home Banner Area =================-->
-        <section id="darkmode" style="margin-top: -200px;" class="p-4 lg:p-8 dark:bg-gray-800 dark:text-gray-100">
-	<div class="container mx-auto space-y-12" id="darkmode">
+        <section id="darkmode" style="margin-top: -200px;" class="p-4 lg:p-8  dark:text-gray-100" style="background-color:#222222;">
+	<div class="container style="background-color:#222222;" mx-auto space-y-12" id="darkmode">
 				<h1 class="text-4xl font-bold leading-none text-center sm:text-5xl" style="margin-top: 250px;">Rendang</h1>
 		<div id="darkmode" class="flex flex-col overflow-hidden rounded-md shadow-sm lg:flex-row"id="darkmode">
 			<img id="darkmode" src="rendang3.jpg" alt="" class="h-80 dark:bg-gray-500 aspect-video">
@@ -150,8 +150,8 @@
 					</ul>
 					<div class="tab-content" id="myTabContent">
 						<div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab" >
-	<section class="py-6 dark:bg-gray-800 dark:text-gray-100">
-	<div class="container flex flex-col items-center justify-center p-4 mx-auto space-y-8 sm:p-10">
+	<section class="py-6  dark:text-gray-100">
+	<div style="background-color:transparent;" id="darkmode" class="container flex flex-col items-center justify-center p-4 mx-auto space-y-8 sm:p-10">
 		<h1 class="text-4xl font-bold leading-none text-center sm:text-5xl">Resep Membuat Rendang </h1>
 		<h5 class="max-w-2xl text-center dark:text-gray-400">
 
@@ -537,7 +537,7 @@
         </section>  
 		<section class="py-6 sm:py-12 dark:bg-gray-800 dark:text-gray-100" id="darkmode">
 			
-        <div class="max-w-sm mx-auto overflow-hidden bg-white rounded-lg shadow-lg dark:bg-gray-800" >
+        <div class="max-w-sm mx-auto overflow-hidden bg-white rounded-lg shadow-lg "style="background-color:#222222;" id="darkmode" >
             <img class="object-cover object-center w-full h-56" src="yas1.jpg" alt="avatar">
             
             <div class="flex items-center px-6 py-3 bg-gray-900">
