--- a/index.html
+++ b/index.html
@@ -536,7 +536,7 @@
         	</div>
         </section>  
 		<section class="py-6 sm:py-12 dark:bg-gray-800 dark:text-gray-100" id="darkmode">
-			
+		<div class="container">	
         <div class="max-w-sm mx-auto overflow-hidden bg-white rounded-lg shadow-lg "style="background-color:#222222;" id="darkmode" >
             <img class="object-cover object-center w-full h-56" src="yas1.jpg" alt="avatar">
             
@@ -578,6 +578,7 @@
                 </div>
             </div>
         </div>
+		</div>	
 </section>
   <svg id="darkmode" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#222222" fill-opacity="1" d="M0,96L26.7,90.7C53.3,85,107,75,160,80C213.3,85,267,107,320,106.7C373.3,107,427,85,480,90.7C533.3,96,587,128,640,138.7C693.3,149,747,139,800,117.3C853.3,96,907,64,960,96C1013.3,128,1067,224,1120,240C1173.3,256,1227,192,1280,181.3C1333.3,171,1387,213,1413,234.7L1440,256L1440,320L1413.3,320C1386.7,320,1333,320,1280,320C1226.7,320,1173,320,1120,320C1066.7,320,1013,320,960,320C906.7,320,853,320,800,320C746.7,320,693,320,640,320C586.7,320,533,320,480,320C426.7,320,373,320,320,320C266.7,320,213,320,160,320C106.7,320,53,320,27,320L0,320Z"></path></svg>      <!--================Footer Area =================-->
       <footer class="px-4 divide-y dark:text-gray-100 " style="background-color: #222222;">
