--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 				<h1 class="text-4xl font-bold leading-none text-center sm:text-5xl" style="margin-top: 250px;">Rendang</h1>
 		<div id="darkmode" class="flex flex-col overflow-hidden rounded-md shadow-sm lg:flex-row"id="darkmode">
 			<img id="darkmode" src="rendang3.jpg" alt="" class="h-80 dark:bg-gray-500 aspect-video">
-			<div id="darkmode" class="flex flex-col justify-center flex-1 p-6 dark:bg-gray-900">
+			<div id="darkmode" class="flex flex-col justify-center flex-1 p-6"  style="background-color:#222222;">
 				<span class="text-xs uppercase dark:text-gray-400">Rendang 🥩</span>
 				<h3 class="text-3xl font-bold">Apa itu Rendang?</h3>
 				<p class="my-6 dark:text-gray-400">Rendang atau randang dalam bahasa Minangkabau adalah Masakan Minangkabau yang berbahan dasar daging yang berasal dari Sumatera Barat, Indonesia. Masakan ini dihasilkan dari proses memasak suhu rendah dalam waktu lama dengan menggunakan aneka rempah-rempah dan santan</p>
@@ -114,7 +114,7 @@
 		</div>
 		<div id="darkmode" class="flex flex-col overflow-hidden rounded-md shadow-sm lg:flex-row-reverse"id="darkmode">
 			<img id="darkmode" src="rendang2.jpg" alt="" class="h-80 dark:bg-gray-500 aspect-video">
-			<div id="darkmode" class="flex flex-col justify-center flex-1 p-6 dark:bg-gray-900">
+			<div id="darkmode" class="flex flex-col justify-center flex-1 p-6"  style="background-color:#222222;">
 				<span class="text-xs uppercase dark:text-gray-400">Rendang 🥩</span>
 				<h3 class="text-3xl font-bold">Rendang terbuat dari apa?</h3>
 				<p class="my-6 dark:text-gray-400">Selain bahan dasar daging, rendang mempergunakan santan kelapa (karambia), dan campuran dari berbagai bumbu khas yang dihaluskan di selangnya cabai (lado), serai, lengkuas, kunyit, jahe, bawang putih, bawang merah dan aneka bumbu lainnya yang pada umumnya dikata untuk pemasak</p>
@@ -123,7 +123,7 @@
 		</div>
 		<div class="flex flex-col overflow-hidden rounded-md shadow-sm lg:flex-row"id="darkmode">
 			<img id="darkmode" src="rendang4'.jpg" alt="" class="h-80 dark:bg-gray-500 aspect-video">
-			<div id="darkmode" class="flex flex-col justify-center flex-1 p-6 dark:bg-gray-900">
+			<div id="darkmode" class="flex flex-col justify-center flex-1 p-6 " style="background-color:#222222;">
 				<span class="text-xs uppercase dark:text-gray-400">Rendang 🥩</span>
 				<h3 class="text-3xl font-bold">Fakta menarik tentang Rendang</h3>
 				<p class="my-6 dark:text-gray-400">Pada 2011, rendang pernah dinobatkan sebagai hidangan yang menduduki peringkat pertama daftar World's 50 Most Delicious Foods (50 Hidangan Terlezat Dunia) versi CNN International. Pada 2018, rendang secara resmi ditetapkan sebagai salah satu dari lima hidangan nasional Indonesia.</p>
@@ -319,7 +319,7 @@
 						<div class="item" >
 							<div class="testi_item"style="background-color: transparent; border:none; ">
 								<div class="container justify-center-around">
-<div class="rounded-md shadow-md sm:w-96 dark:bg-gray-900 dark:text-gray-100">
+<div class="rounded-md shadow-md sm:w-96  dark:text-gray-100" style="background-color:transparent;">
 	<div class="flex items-center justify-between p-3">
 		<div class="flex items-center space-x-2">
 			<img src="yas1.jpg" alt="" class="object-cover object-center w-8 h-8 rounded-full shadow-sm dark:bg-gray-500 dark:border-gray-700">
@@ -390,7 +390,7 @@
 						<div class="item" >
 							<div class="testi_item"style="background-color: transparent; border:none; ">
 								<div class="container justify-center-around">
-<div class="rounded-md shadow-md sm:w-96 dark:bg-gray-900 dark:text-gray-100">
+<div class="rounded-md shadow-md sm:w-96  dark:text-gray-100" style="background-color:transparent;">
 	<div class="flex items-center justify-between p-3">
 		<div class="flex items-center space-x-2">
 			<img src="yas1.jpg" alt="" class="object-cover object-center w-8 h-8 rounded-full shadow-sm dark:bg-gray-500 dark:border-gray-700">
@@ -461,7 +461,7 @@
 						<div class="item" >
 							<div class="testi_item"style="background-color: transparent; border:none; ">
 								<div class="container justify-center-around">
-<div class="rounded-md shadow-md sm:w-96 dark:bg-gray-900 dark:text-gray-100">
+<div class="rounded-md shadow-md sm:w-96 dark:text-gray-100" style="background-color:transparent;">
 	<div class="flex items-center justify-between p-3">
 		<div class="flex items-center space-x-2">
 			<img src="yas1.jpg" alt="" class="object-cover object-center w-8 h-8 rounded-full shadow-sm dark:bg-gray-500 dark:border-gray-700">
@@ -535,7 +535,7 @@
         		</div> 
         	</div>
         </section>  
-		<section class="py-6 sm:py-12 dark:bg-gray-800 dark:text-gray-100" id="darkmode">
+		<section class="py-6 sm:py-12  dark:text-gray-100" id="darkmode" style="background-color:#222222;">
 		<div class="container">	
         <div class="max-w-sm mx-auto overflow-hidden bg-white rounded-lg shadow-lg "style="background-color:#222222;" id="darkmode" >
             <img class="object-cover object-center w-full h-56" src="yas1.jpg" alt="avatar">
