--- a/index.html
+++ b/index.html
@@ -537,7 +537,7 @@
         </section>  
 		<section class="py-6 sm:py-12  dark:text-gray-100" id="darkmode" style="background-color:#222222;">
 		<div class="container">	
-        <div class="max-w-sm mx-auto overflow-hidden bg-white rounded-lg shadow-lg "style="background-color:#222222;" id="darkmode" >
+        <div class="max-w-sm mx-auto overflow-hidden rounded-lg shadow-lg "style="background-color:transparent;" id="darkmode" >
             <img class="object-cover object-center w-full h-56" src="yas1.jpg" alt="avatar">
             
             <div class="flex items-center px-6 py-3 bg-gray-900">
