--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 </section>
 						</div>
 						<div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
-									<h1 class="text-4xl font-bold leading-none text-center mb-5 sm:text-5xl">Cara Membuat Rendang </h1>
+									<h1 class="text-4xl font-bold leading-none text-center mt-10 mb-5 sm:text-5xl">Cara Membuat Rendang </h1>
 
 							<ul class="list">
 								<li>
