--- a/index.html
+++ b/index.html
@@ -535,8 +535,8 @@
         		</div> 
         	</div>
         </section>  
-		<section class="py-6 sm:py-12  dark:text-gray-100" id="darkmode" style="background-color:#222222;">
-		<div class="container">	
+		<section class="py-6 sm:py-12  dark:text-gray-100" id="darkmode" style="background-color:transparent;">
+		<div class="container" style="background-color:transparent;" id="darkmode">	
         <div class="max-w-sm mx-auto overflow-hidden rounded-lg shadow-lg "style="background-color:transparent;" id="darkmode" >
             <img class="object-cover object-center w-full h-56" src="yas1.jpg" alt="avatar">
             
