--- a/index.html
+++ b/index.html
@@ -103,27 +103,27 @@
         <section id="darkmode" style="margin-top: -200px;" class="p-4 lg:p-8  dark:text-gray-100" style="background-color:#222222;">
 	<div class="container style="background-color:#222222;" mx-auto space-y-12" id="darkmode">
 				<h1 class="text-4xl font-bold leading-none text-center sm:text-5xl" style="margin-top: 250px;">Rendang</h1>
-		<div id="darkmode" class="flex flex-col overflow-hidden rounded-md shadow-sm lg:flex-row"id="darkmode">
+		<div id="darkmode" class="flex flex-col overflow-hidden rounded-md shadow-sm lg:flex-row"id="darkmode" style="background-color:transparent;" >
 			<img id="darkmode" src="rendang3.jpg" alt="" class="h-80 dark:bg-gray-500 aspect-video">
-			<div id="darkmode" class="flex flex-col justify-center flex-1 p-6"  style="background-color:#222222;">
+			<div id="darkmode" class="flex flex-col justify-center flex-1 p-6"  style="background-color:transparent;" >
 				<span class="text-xs uppercase dark:text-gray-400">Rendang 🥩</span>
 				<h3 class="text-3xl font-bold">Apa itu Rendang?</h3>
 				<p class="my-6 dark:text-gray-400">Rendang atau randang dalam bahasa Minangkabau adalah Masakan Minangkabau yang berbahan dasar daging yang berasal dari Sumatera Barat, Indonesia. Masakan ini dihasilkan dari proses memasak suhu rendah dalam waktu lama dengan menggunakan aneka rempah-rempah dan santan</p>
 				<button type="button" class="self-start"></button>
 			</div>
 		</div>
-		<div id="darkmode" class="flex flex-col overflow-hidden rounded-md shadow-sm lg:flex-row-reverse"id="darkmode">
+		<div id="darkmode" class="flex flex-col overflow-hidden rounded-md shadow-sm lg:flex-row-reverse"id="darkmode"style="background-color:transparent;">
 			<img id="darkmode" src="rendang2.jpg" alt="" class="h-80 dark:bg-gray-500 aspect-video">
-			<div id="darkmode" class="flex flex-col justify-center flex-1 p-6"  style="background-color:#222222;">
+			<div id="darkmode" class="flex flex-col justify-center flex-1 p-6"  style="background-color:transparent;">
 				<span class="text-xs uppercase dark:text-gray-400">Rendang 🥩</span>
 				<h3 class="text-3xl font-bold">Rendang terbuat dari apa?</h3>
 				<p class="my-6 dark:text-gray-400">Selain bahan dasar daging, rendang mempergunakan santan kelapa (karambia), dan campuran dari berbagai bumbu khas yang dihaluskan di selangnya cabai (lado), serai, lengkuas, kunyit, jahe, bawang putih, bawang merah dan aneka bumbu lainnya yang pada umumnya dikata untuk pemasak</p>
 				<button type="button" class="self-start"></button>
 			</div>
 		</div>
-		<div class="flex flex-col overflow-hidden rounded-md shadow-sm lg:flex-row"id="darkmode">
+		<div class="flex flex-col overflow-hidden rounded-md shadow-sm lg:flex-row"id="darkmode"style="background-color:transparent;">
 			<img id="darkmode" src="rendang4'.jpg" alt="" class="h-80 dark:bg-gray-500 aspect-video">
-			<div id="darkmode" class="flex flex-col justify-center flex-1 p-6 " style="background-color:#222222;">
+			<div id="darkmode" class="flex flex-col justify-center flex-1 p-6 " style="background-color:transparent;">
 				<span class="text-xs uppercase dark:text-gray-400">Rendang 🥩</span>
 				<h3 class="text-3xl font-bold">Fakta menarik tentang Rendang</h3>
 				<p class="my-6 dark:text-gray-400">Pada 2011, rendang pernah dinobatkan sebagai hidangan yang menduduki peringkat pertama daftar World's 50 Most Delicious Foods (50 Hidangan Terlezat Dunia) versi CNN International. Pada 2018, rendang secara resmi ditetapkan sebagai salah satu dari lima hidangan nasional Indonesia.</p>
