--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         <!--================End Home Banner Area =================-->
         <section id="darkmode" style="margin-top: -200px;" class="p-4 lg:p-8  dark:text-gray-100" style="background-color:#222222;">
 	<div class="container style="background-color:#222222;" mx-auto space-y-12" id="darkmode">
-				<h1 class="text-4xl font-bold leading-none mb-10 text-center sm:text-5xl" style="margin-top: 250px; margin-bottom:20px;">Rendang</h1>
+				<h1 class="text-4xl font-bold leading-none mb-10 text-center sm:text-5xl" style="margin-top: 250px;">Rendang</h1>
 		<div id="darkmode" class="flex flex-col overflow-hidden rounded-md shadow-sm lg:flex-row"id="darkmode" style="background-color:transparent;" >
 			<img id="darkmode" src="rendang3.jpg" alt="" class="h-80 dark:bg-gray-500 aspect-video">
 			<div id="darkmode" class="flex flex-col justify-center flex-1 p-6"  style="background-color:transparent;" >
