--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
         	<div class="container">
         		
 				<div class="main_title" style="margin-bottom:-10px ;">
-        			 <h1>About me </h1>
+        			 <h1 style="font-family:teko,sans-serif;">About me </h1>
         			
 				</div>
         		 <div class="testi_inner">
