--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             	<nav class="navbar navbar-expand-sm " style="background-color: transparent;">
 					<div class="container box_1620">
 						<!-- Brand and toggle get grouped for better mobile display -->
-						<h5 id="darkmode1" style="font-size:30px; font-family:teko,sans-serif;"><i style="color:deepskyblue;" class="fa fa-code"></i> Frahesta</h5>
+						<h5 id="darkmode1" style="font-size:30px; font-family:teko,sans-serif;font-style:italic;">Frahesta</h5>
 						
 					
 					<div id="darkmode1" class="btn-group" ">
