--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
 <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 		<link href="https://cdn.jsdelivr.net/npm/daisyui@2.20.0/dist/full.css" rel="stylesheet" type="text/css" />
 <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2/dist/tailwind.min.css" rel="stylesheet" type="text/css" />
+<link rel="preconnect" href="https://fonts.googleapis.com">
 
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+<link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="css/bootstrap.css">
         <link rel="stylesheet" href="vendors/linericon/style.css">
         <link rel="stylesheet" href="css/font-awesome.min.css">
@@ -44,7 +48,7 @@
             	<nav class="navbar navbar-expand-sm " style="background-color: transparent;">
 					<div class="container box_1620">
 						<!-- Brand and toggle get grouped for better mobile display -->
-						<h5 id="darkmode1" style="font-size:30px; font-family:teko,sans-serif;font-style:italic;">Frahesta</h5>
+						<h5 id="darkmode1" style="font-size:30px; font-family:Pacifico, cursive;font-style:italic;">Frahesta</h5>
 						
 					
 					<div id="darkmode1" class="btn-group" ">
