--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             	<nav class="navbar navbar-expand-sm " style="background-color: transparent;">
 					<div class="container box_1620">
 						<!-- Brand and toggle get grouped for better mobile display -->
-						<h5 id="darkmode1" style="font-size:25px; font-family:Pacifico, cursive;font-style:italic;">Frahesta 🇮🇩</h5>
+						<h5 id="darkmode1" style="font-size:25px; font-family:teko, cursive;font-style:italic;">Frahesta 🇮🇩</h5>
 						
 					
 					<div id="darkmode1" class="btn-group" ">
