--- a/index.html
+++ b/index.html
@@ -315,13 +315,12 @@
 							<div class="testi_item"style="background-color: transparent; border:none; ">
 								<div class="container justify-center-around">
 <div class="max-w-xs rounded-md shadow-md dark:bg-gray-900 dark:text-gray-100">
-	<img src="https://source.unsplash.com/random/300x300/?2" alt="" class="object-cover object-center w-full rounded-t-md h-72 dark:bg-gray-500">
+	<img src="rendangtelur.jpg" alt="" class="object-cover object-center w-full rounded-t-md h-72 dark:bg-gray-500">
 	<div class="flex flex-col justify-between p-6 space-y-8">
 		<div class="space-y-2">
-			<h2 class="text-3xl font-semibold tracking-wide">Donec lectus leo</h2>
-			<p class="dark:text-gray-100">Curabitur luctus erat nunc, sed ullamcorper erat vestibulum eget.</p>
+			<h2 class="text-3xl font-semibold tracking-wide">Rendang Telur</h2>
+			<p class="dark:text-gray-100">"Rendang dengan bahan dasar telur ini terbagi dalam dua macam. Rendang telur pipih yang serupa dengan kerupuk. Atau rendang telur khas suliki yang hampir menyerupai rendang hati dan paru."</p>
 		</div>
-		<button type="button" class="flex items-center justify-center w-full p-3 font-semibold tracking-wide rounded-md dark:bg-teal-400 dark:text-gray-900">Read more</button>
 	</div>
 </div>
 </div>	
@@ -332,13 +331,12 @@
 							<div class="testi_item"style="background-color: transparent; border:none; ">
 								<div class="container justify-center-around">
 <div class="max-w-xs rounded-md shadow-md dark:bg-gray-900 dark:text-gray-100">
-	<img src="https://source.unsplash.com/random/300x300/?2" alt="" class="object-cover object-center w-full rounded-t-md h-72 dark:bg-gray-500">
+	<img src="ayam.jpg" alt="" class="object-cover object-center w-full rounded-t-md h-72 dark:bg-gray-500">
 	<div class="flex flex-col justify-between p-6 space-y-8">
 		<div class="space-y-2">
-			<h2 class="text-3xl font-semibold tracking-wide">Donec lectus leo</h2>
-			<p class="dark:text-gray-100">Curabitur luctus erat nunc, sed ullamcorper erat vestibulum eget.</p>
+			<h2 class="text-3xl font-semibold tracking-wide">Rendang Ayam</h2>
+			<p class="dark:text-gray-100">"Rendang ayam ini bisa disajikan dengan cara menghancurkan daging ayam, baik itu digiling, diurai, atau dipotong dengan ukuran yang sesuai dengan selera. Rendang daging ayam ini bisa ditemukan di beberapa rumah makan padang, baik yang ada di Sumatra Barat maupun di luar Sumatra Barat."</p>
 		</div>
-		<button type="button" class="flex items-center justify-center w-full p-3 font-semibold tracking-wide rounded-md dark:bg-teal-400 dark:text-gray-900">Read more</button>
 	</div>
 </div>
 </div>	
@@ -349,13 +347,47 @@
 							<div class="testi_item"style="background-color: transparent; border:none; ">
 								<div class="container justify-center-around">
 <div class="max-w-xs rounded-md shadow-md dark:bg-gray-900 dark:text-gray-100">
-	<img src="https://source.unsplash.com/random/300x300/?2" alt="" class="object-cover object-center w-full rounded-t-md h-72 dark:bg-gray-500">
+	<img src="kambing.jpg" alt="" class="object-cover object-center w-full rounded-t-md h-72 dark:bg-gray-500">
 	<div class="flex flex-col justify-between p-6 space-y-8">
 		<div class="space-y-2">
-			<h2 class="text-3xl font-semibold tracking-wide">Donec lectus leo</h2>
-			<p class="dark:text-gray-100">Curabitur luctus erat nunc, sed ullamcorper erat vestibulum eget.</p>
+			<h2 class="text-3xl font-semibold tracking-wide">Rendang Kambing</h2>
+			<p class="dark:text-gray-100">"Rendang lezat dengan daging kambing sebagai pengganti daging sapi. Pilih daging bagian paha tanpa lemak, tambahkan air kelapa untuk menambah rasa manis pada hidangan."</p>
 		</div>
-		<button type="button" class="flex items-center justify-center w-full p-3 font-semibold tracking-wide rounded-md dark:bg-teal-400 dark:text-gray-900">Read more</button>
+		
+	</div>
+</div>
+</div>	
+
+							</div>
+						</div>
+						<div class="item" >
+							<div class="testi_item"style="background-color: transparent; border:none; ">
+								<div class="container justify-center-around">
+<div class="max-w-xs rounded-md shadow-md dark:bg-gray-900 dark:text-gray-100">
+	<img src="sapi.jpg" alt="" class="object-cover object-center w-full rounded-t-md h-72 dark:bg-gray-500">
+	<div class="flex flex-col justify-between p-6 space-y-8">
+		<div class="space-y-2">
+			<h2 class="text-3xl font-semibold tracking-wide">Rendang Sapi</h2>
+			<p class="dark:text-gray-100">"Rendang ini, dikenal hampir diseluruh dunia, rendang ini menjadi ikon tersendiri bagi masyarakat Minangkabau. Masakan dengan bumbu pekat hitam yang dibuat dari santan yang dimasak 6 jam lebih ini kaya akan rempah-rempah. Daging sapi bertekstur padat menjadi bahan utamanya. Hampir di setiap rumah makan dan restoran padang, baik itu dalam dan luar negeri, rendang jenis ini selalu terhidang dan menjadi menu utama yang sudah tak asing lagi."</p>
+		</div>
+		
+	</div>
+</div>
+</div>	
+
+							</div>
+						</div>
+						<div class="item" >
+							<div class="testi_item"style="background-color: transparent; border:none; ">
+								<div class="container justify-center-around">
+<div class="max-w-xs rounded-md shadow-md dark:bg-gray-900 dark:text-gray-100">
+	<img src="pakis.jpg" alt="" class="object-cover object-center w-full rounded-t-md h-72 dark:bg-gray-500">
+	<div class="flex flex-col justify-between p-6 space-y-8">
+		<div class="space-y-2">
+			<h2 class="text-3xl font-semibold tracking-wide">Rendang Pakis</h2>
+			<p class="dark:text-gray-100">"Di Kabupaten Pasaman, khususnya di daerah sekitar Bonjol, sebuah pesta dikatakan kurang maksimal apabila tidak menyajikan rendang pakis sebagai lauk yang wajib terhidang dalam setiap pesta. Rendang pakis, biasanya dimasak sampai kering"</p>
+		</div>
+		
 	</div>
 </div>
 </div>	
@@ -384,24 +416,7 @@
 		</div>
 		<div class="container mx-auto grid grid-cols-1 gap-8 lg:gap-20 md:px-10 md:pb-10 lg:grid-cols-2"id="darkmode" style="background-color: transparent;">
 			<div class="flex flex-col items-center mx-12 lg:mx-0">
-				<div class="relative text-center" id="darkmode" style="background-color: transparent;">
-					<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" fill="currentColor" class="absolute top-0 left-0 w-8 h-8 text-gray-700">
-						<path d="M232,246.857V16H16V416H54.4ZM48,48H200V233.143L48,377.905Z"></path>
-						<path d="M280,416h38.4L496,246.857V16H280ZM312,48H464V233.143L312,377.905Z"></path>
-					</svg>
-					<p class="px-6 py-1 text-lg italic">
-						Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque hic assumenda nihil, officiis, harum qui illum placeat voluptatem voluptas exercitationem iusto nam laudantium. Excepturi harum enim sequi placeat iusto dolore aliquam expedita beatae, ipsum cum consequuntur nobis. Placeat id sed reiciendis. Numquam, sunt cupiditate eum excepturi quod laudantium corrupti aliquid et facere ipsam a quis iusto harum atque qui blanditiis voluptate! Rerum suscipit quidem dicta accusantium adipisci repellat voluptatibus aperiam nemo aspernatur saepe nam, nisi cumque officiis molestias quas officia, temporibus facere iure in voluptas sequi consequatur ad quis. Quasi, magni! Voluptatibus ipsam placeat, facere labore sapiente quas magnam minima?
-						Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus quibusdam, eligendi exercitationem molestias possimus facere.</p>
-					<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" fill="currentColor" class="absolute bottom-0 right-0 w-8 h-8 text-gray-700">
-						<path d="M280,185.143V416H496V16H457.6ZM464,384H312V198.857L464,54.1Z"></path>
-						<path d="M232,16H193.6L16,185.143V416H232ZM200,384H48V198.857L200,54.1Z"></path>
-					</svg>
-				</div>
-				<span class="w-12 h-1 my-2 rounded-lg bg-teal-400"></span>
-				<p>Tiyas Frahesta</p>
-			</div>
-			<div class="flex flex-col items-center max-w-lg mx-12 lg:mx-0">
-			<div class="rounded-md shadow-md sm:w-96 dark:text-gray-100" style="background-color:transparent;">
+					<div class="rounded-md shadow-md sm:w-96 dark:text-gray-100" style="background-color:transparent;">
 		<div class="flex items-center justify-between p-3">
 			<div class="flex items-center space-x-2">
 				<img src="yas1.jpg" alt="" class="object-cover object-center w-8 h-8 rounded-full shadow-sm dark:bg-gray-500 dark:border-gray-700">
@@ -465,6 +480,24 @@
 			</div>
 		</div>
 	</div>
+			</div>
+			<div class="flex flex-col items-center max-w-lg mx-12 lg:mx-0">
+				<div class="relative text-center" id="darkmode" style="background-color: transparent;">
+					<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" fill="currentColor" class="absolute top-0 left-0 w-8 h-8 text-gray-700">
+						<path d="M232,246.857V16H16V416H54.4ZM48,48H200V233.143L48,377.905Z"></path>
+						<path d="M280,416h38.4L496,246.857V16H280ZM312,48H464V233.143L312,377.905Z"></path>
+					</svg>
+					<p class="px-6 py-1 text-lg italic">
+						Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque hic assumenda nihil, officiis, harum qui illum placeat voluptatem voluptas exercitationem iusto nam laudantium. Excepturi harum enim sequi placeat iusto dolore aliquam expedita beatae, ipsum cum consequuntur nobis. Placeat id sed reiciendis. Numquam, sunt cupiditate eum excepturi quod laudantium corrupti aliquid et facere ipsam a quis iusto harum atque qui blanditiis voluptate! Rerum suscipit quidem dicta accusantium adipisci repellat voluptatibus aperiam nemo aspernatur saepe nam, nisi cumque officiis molestias quas officia, temporibus facere iure in voluptas sequi consequatur ad quis. Quasi, magni! Voluptatibus ipsam placeat, facere labore sapiente quas magnam minima?
+						Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus quibusdam, eligendi exercitationem molestias possimus facere.</p>
+					<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" fill="currentColor" class="absolute bottom-0 right-0 w-8 h-8 text-gray-700">
+						<path d="M280,185.143V416H496V16H457.6ZM464,384H312V198.857L464,54.1Z"></path>
+						<path d="M232,16H193.6L16,185.143V416H232ZM200,384H48V198.857L200,54.1Z"></path>
+					</svg>
+				</div>
+				<span class="w-12 h-1 my-2 rounded-lg bg-teal-400"></span>
+				<p>Tiyas Frahesta</p>
+		
 		</div>
 	</section>
         </section>  
