--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
 								<div class="container justify-center-around">
 <div class="max-w-xs rounded-md shadow-md dark:bg-gray-900 dark:text-gray-100">
 	<img src="rendangtelur.jpg" alt="" class="object-cover object-center w-full rounded-t-md h-72 dark:bg-gray-500">
-	<div class="flex flex-col justify-between p-6 space-y-8">
+	<div style="background-color: transparent;"  class="flex flex-col justify-between p-6 space-y-8">
 		<div class="space-y-2">
 			<h2 class="text-3xl font-semibold tracking-wide">Rendang Telur</h2>
 			<p class="dark:text-gray-100">"Rendang dengan bahan dasar telur ini terbagi dalam dua macam. Rendang telur pipih yang serupa dengan kerupuk. Atau rendang telur khas suliki yang hampir menyerupai rendang hati dan paru."</p>
@@ -332,7 +332,7 @@
 								<div class="container justify-center-around">
 <div class="max-w-xs rounded-md shadow-md dark:bg-gray-900 dark:text-gray-100">
 	<img src="ayam.jpg" alt="" class="object-cover object-center w-full rounded-t-md h-72 dark:bg-gray-500">
-	<div class="flex flex-col justify-between p-6 space-y-8">
+	<div style="background-color: transparent;" class="flex flex-col justify-between p-6 space-y-8">
 		<div class="space-y-2">
 			<h2 class="text-3xl font-semibold tracking-wide">Rendang Ayam</h2>
 			<p class="dark:text-gray-100">"Rendang ayam ini bisa disajikan dengan cara menghancurkan daging ayam, baik itu digiling, diurai, atau dipotong dengan ukuran yang sesuai dengan selera. Rendang daging ayam ini bisa ditemukan di beberapa rumah makan padang, baik yang ada di Sumatra Barat maupun di luar Sumatra Barat."</p>
@@ -348,7 +348,7 @@
 								<div class="container justify-center-around">
 <div class="max-w-xs rounded-md shadow-md dark:bg-gray-900 dark:text-gray-100">
 	<img src="kambing.jpg" alt="" class="object-cover object-center w-full rounded-t-md h-72 dark:bg-gray-500">
-	<div class="flex flex-col justify-between p-6 space-y-8">
+	<div style="background-color: transparent;" class="flex flex-col justify-between p-6 space-y-8">
 		<div class="space-y-2">
 			<h2 class="text-3xl font-semibold tracking-wide">Rendang Kambing</h2>
 			<p class="dark:text-gray-100">"Rendang lezat dengan daging kambing sebagai pengganti daging sapi. Pilih daging bagian paha tanpa lemak, tambahkan air kelapa untuk menambah rasa manis pada hidangan."</p>
@@ -365,7 +365,7 @@
 								<div class="container justify-center-around">
 <div class="max-w-xs rounded-md shadow-md dark:bg-gray-900 dark:text-gray-100">
 	<img src="sapi.jpg" alt="" class="object-cover object-center w-full rounded-t-md h-72 dark:bg-gray-500">
-	<div class="flex flex-col justify-between p-6 space-y-8">
+	<div style="background-color: transparent;" class="flex flex-col justify-between p-6 space-y-8">
 		<div class="space-y-2">
 			<h2 class="text-3xl font-semibold tracking-wide">Rendang Sapi</h2>
 			<p class="dark:text-gray-100">"Rendang ini, dikenal hampir diseluruh dunia, rendang ini menjadi ikon tersendiri bagi masyarakat Minangkabau. Masakan dengan bumbu pekat hitam yang dibuat dari santan yang dimasak 6 jam lebih ini kaya akan rempah-rempah. Daging sapi bertekstur padat menjadi bahan utamanya. Hampir di setiap rumah makan dan restoran padang, baik itu dalam dan luar negeri, rendang jenis ini selalu terhidang dan menjadi menu utama yang sudah tak asing lagi."</p>
@@ -382,7 +382,7 @@
 								<div class="container justify-center-around">
 <div class="max-w-xs rounded-md shadow-md dark:bg-gray-900 dark:text-gray-100">
 	<img src="pakis.jpg" alt="" class="object-cover object-center w-full rounded-t-md h-72 dark:bg-gray-500">
-	<div class="flex flex-col justify-between p-6 space-y-8">
+	<div style="background-color: transparent;" class="flex flex-col justify-between p-6 space-y-8">
 		<div class="space-y-2">
 			<h2 class="text-3xl font-semibold tracking-wide">Rendang Pakis</h2>
 			<p class="dark:text-gray-100">"Di Kabupaten Pasaman, khususnya di daerah sekitar Bonjol, sebuah pesta dikatakan kurang maksimal apabila tidak menyajikan rendang pakis sebagai lauk yang wajib terhidang dalam setiap pesta. Rendang pakis, biasanya dimasak sampai kering"</p>
@@ -412,7 +412,7 @@
       <section class="testimonials_area p_120" id="darkmode">
 			<section class="my-8" id="darkmode" style="background-color: transparent;">
 		<div class="container mx-auto flex flex-col items-center pb-6 mb-4 md:p-10 md:px-12"id="darkmode" style="background-color: transparent;">
-			<h1 class="text-4xl font-semibold leading-none text-center" style="font-family:teko,sans-serif;">About Me</h1>
+			<h1 class="text-4xl font-semibold leading-none text-center" style="font-family:teko,sans-serif;">About</h1>
 		</div>
 		<div class="container mx-auto grid grid-cols-1 gap-8 lg:gap-20 md:px-10 md:pb-10 lg:grid-cols-2"id="darkmode" style="background-color: transparent;">
 			<div class="flex flex-col items-center mx-12 lg:mx-0">
@@ -488,15 +488,14 @@
 						<path d="M280,416h38.4L496,246.857V16H280ZM312,48H464V233.143L312,377.905Z"></path>
 					</svg>
 					<p class="px-6 py-1 text-lg italic">
-						Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque hic assumenda nihil, officiis, harum qui illum placeat voluptatem voluptas exercitationem iusto nam laudantium. Excepturi harum enim sequi placeat iusto dolore aliquam expedita beatae, ipsum cum consequuntur nobis. Placeat id sed reiciendis. Numquam, sunt cupiditate eum excepturi quod laudantium corrupti aliquid et facere ipsam a quis iusto harum atque qui blanditiis voluptate! Rerum suscipit quidem dicta accusantium adipisci repellat voluptatibus aperiam nemo aspernatur saepe nam, nisi cumque officiis molestias quas officia, temporibus facere iure in voluptas sequi consequatur ad quis. Quasi, magni! Voluptatibus ipsam placeat, facere labore sapiente quas magnam minima?
-						Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus quibusdam, eligendi exercitationem molestias possimus facere.</p>
+						The only way to do great work is to love what you do. If you haven’t found it yet, keep looking. Don’t settle.”</p>
 					<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" fill="currentColor" class="absolute bottom-0 right-0 w-8 h-8 text-gray-700">
 						<path d="M280,185.143V416H496V16H457.6ZM464,384H312V198.857L464,54.1Z"></path>
 						<path d="M232,16H193.6L16,185.143V416H232ZM200,384H48V198.857L200,54.1Z"></path>
 					</svg>
 				</div>
 				<span class="w-12 h-1 my-2 rounded-lg bg-teal-400"></span>
-				<p>Tiyas Frahesta</p>
+				<p>Steve Jobs</p>
 		
 		</div>
 	</section>
