--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
 <div class="max-w-xs rounded-md shadow-md dark:bg-gray-900 dark:text-gray-100">
 	<img src="rendangtelur.jpg" alt="" class="object-cover object-center w-full rounded-t-md h-72 dark:bg-gray-500">
 	<div style="background-color: transparent;"  class="flex flex-col justify-between p-6 space-y-8">
-		<div class="space-y-2">
+		<div style="background-color: transparent;" class="space-y-2">
 			<h2 class="text-3xl font-semibold tracking-wide">Rendang Telur</h2>
 			<p class="dark:text-gray-100">"Rendang dengan bahan dasar telur ini terbagi dalam dua macam. Rendang telur pipih yang serupa dengan kerupuk. Atau rendang telur khas suliki yang hampir menyerupai rendang hati dan paru."</p>
 		</div>
@@ -333,7 +333,7 @@
 <div class="max-w-xs rounded-md shadow-md dark:bg-gray-900 dark:text-gray-100">
 	<img src="ayam.jpg" alt="" class="object-cover object-center w-full rounded-t-md h-72 dark:bg-gray-500">
 	<div style="background-color: transparent;" class="flex flex-col justify-between p-6 space-y-8">
-		<div class="space-y-2">
+		<div style="background-color: transparent;" class="space-y-2">
 			<h2 class="text-3xl font-semibold tracking-wide">Rendang Ayam</h2>
 			<p class="dark:text-gray-100">"Rendang ayam ini bisa disajikan dengan cara menghancurkan daging ayam, baik itu digiling, diurai, atau dipotong dengan ukuran yang sesuai dengan selera. Rendang daging ayam ini bisa ditemukan di beberapa rumah makan padang, baik yang ada di Sumatra Barat maupun di luar Sumatra Barat."</p>
 		</div>
@@ -349,7 +349,7 @@
 <div class="max-w-xs rounded-md shadow-md dark:bg-gray-900 dark:text-gray-100">
 	<img src="kambing.jpg" alt="" class="object-cover object-center w-full rounded-t-md h-72 dark:bg-gray-500">
 	<div style="background-color: transparent;" class="flex flex-col justify-between p-6 space-y-8">
-		<div class="space-y-2">
+		<div style="background-color: transparent;" class="space-y-2">
 			<h2 class="text-3xl font-semibold tracking-wide">Rendang Kambing</h2>
 			<p class="dark:text-gray-100">"Rendang lezat dengan daging kambing sebagai pengganti daging sapi. Pilih daging bagian paha tanpa lemak, tambahkan air kelapa untuk menambah rasa manis pada hidangan."</p>
 		</div>
@@ -366,7 +366,7 @@
 <div class="max-w-xs rounded-md shadow-md dark:bg-gray-900 dark:text-gray-100">
 	<img src="sapi.jpg" alt="" class="object-cover object-center w-full rounded-t-md h-72 dark:bg-gray-500">
 	<div style="background-color: transparent;" class="flex flex-col justify-between p-6 space-y-8">
-		<div class="space-y-2">
+		<div style="background-color: transparent;" class="space-y-2">
 			<h2 class="text-3xl font-semibold tracking-wide">Rendang Sapi</h2>
 			<p class="dark:text-gray-100">"Rendang ini, dikenal hampir diseluruh dunia, rendang ini menjadi ikon tersendiri bagi masyarakat Minangkabau. Masakan dengan bumbu pekat hitam yang dibuat dari santan yang dimasak 6 jam lebih ini kaya akan rempah-rempah. Daging sapi bertekstur padat menjadi bahan utamanya. Hampir di setiap rumah makan dan restoran padang, baik itu dalam dan luar negeri, rendang jenis ini selalu terhidang dan menjadi menu utama yang sudah tak asing lagi."</p>
 		</div>
@@ -383,7 +383,7 @@
 <div class="max-w-xs rounded-md shadow-md dark:bg-gray-900 dark:text-gray-100">
 	<img src="pakis.jpg" alt="" class="object-cover object-center w-full rounded-t-md h-72 dark:bg-gray-500">
 	<div style="background-color: transparent;" class="flex flex-col justify-between p-6 space-y-8">
-		<div class="space-y-2">
+		<div style="background-color: transparent;"  class="space-y-2">
 			<h2 class="text-3xl font-semibold tracking-wide">Rendang Pakis</h2>
 			<p class="dark:text-gray-100">"Di Kabupaten Pasaman, khususnya di daerah sekitar Bonjol, sebuah pesta dikatakan kurang maksimal apabila tidak menyajikan rendang pakis sebagai lauk yang wajib terhidang dalam setiap pesta. Rendang pakis, biasanya dimasak sampai kering"</p>
 		</div>
@@ -467,14 +467,14 @@
 						<img alt="" class="w-5 h-5 border rounded-full dark:bg-gray-500 dark:border-gray-800" src="https://source.unsplash.com/40x40/?portrait?3">
 					</div>
 					<span class="text-sm">Liked by
-						<span class="font-semibold">ikram.afro </span>and
+						<span class="font-semibold">karimbenzema </span>and
 						<span class="font-semibold">148 others</span>
 					</span>
 				</div>
 			</div>
 			<div class="space-y-3">
 				<p class="text-sm"style="font-style:normal ; color:white;" >
-					<span class="text-base font-semibold" style="font-style:normal ; color:white;">TiyasFrahesta</span> I'm 19 Years old and
+					<span class="text-base font-semibold" style="font-style:normal ; color:white;">TiyasFrahesta</span> I Like Programming ❤️
 				</p>
 				<input type="text" placeholder=" Add a comment..." class="w-full py-0.5 dark:bg-transparent border-none rounded text-sm pl-0 dark:text-gray-100">
 			</div>
@@ -483,13 +483,13 @@
 			</div>
 			<div class="flex flex-col items-center max-w-lg mx-12 lg:mx-0">
 				<div class="relative text-center" id="darkmode" style="background-color: transparent;">
-					<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" fill="currentColor" class="absolute top-0 left-0 w-8 h-8 text-gray-700">
+					<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" fill="deepskyblue" class="absolute top-0 left-0 w-8 h-8 text-gray-700">
 						<path d="M232,246.857V16H16V416H54.4ZM48,48H200V233.143L48,377.905Z"></path>
 						<path d="M280,416h38.4L496,246.857V16H280ZM312,48H464V233.143L312,377.905Z"></path>
 					</svg>
 					<p class="px-6 py-1 text-lg italic">
 						The only way to do great work is to love what you do. If you haven’t found it yet, keep looking. Don’t settle.”</p>
-					<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" fill="currentColor" class="absolute bottom-0 right-0 w-8 h-8 text-gray-700">
+					<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" fill="deepskyblue" class="absolute bottom-0 right-0 w-8 h-8 text-gray-700">
 						<path d="M280,185.143V416H496V16H457.6ZM464,384H312V198.857L464,54.1Z"></path>
 						<path d="M232,16H193.6L16,185.143V416H232ZM200,384H48V198.857L200,54.1Z"></path>
 					</svg>
